darkened background behind mobile menu, resolved html issue with carousel

--- a/themes/twenty-seventeen/assets/css/packitrightnow---twenty-seventeen.css
+++ b/themes/twenty-seventeen/assets/css/packitrightnow---twenty-seventeen.css
@@ -246,7 +246,7 @@ a:hover, a:focus, a:active, a:focus:active {
   bottom: 0;
   width: 100%;
   padding: 15px 0;
-  background: rgba(0, 0, 0, 0.65);
+  background: rgba(0, 0, 0, 0.95);
   opacity: 0;
   visibility: hidden;
   transition: opacity .4s ease-in-out, visibility .4s ease-in-out;
@@ -482,7 +482,7 @@ a:hover, a:focus, a:active, a:focus:active {
 .header .header-information p a:hover {
   color: #333; }
 
-.header i.dropdown {
+.header i.drop-down {
   opacity: 0;
   visibility: hidden;
   position: absolute;
@@ -493,7 +493,7 @@ a:hover, a:focus, a:active, a:focus:active {
   cursor: pointer;
   transition: opacity .4s ease-in-out, visibility .4s ease-in-out; }
   @media only screen and (max-width: 991px) {
-    .header i.dropdown {
+    .header i.drop-down {
       opacity: 1;
       visibility: visible; } }
 
