--- a/themes/twenty-seventeen/assets/scss/components/_mobile-menu.scss
+++ b/themes/twenty-seventeen/assets/scss/components/_mobile-menu.scss
@@ -10,7 +10,7 @@
 		bottom: 0;
 		width: 100%;
 		padding: 15px 0;
-		background: rgba( 0, 0, 0, .65 );
+		background: rgba( 0, 0, 0, .95 );
 		opacity: 0;
 		visibility: hidden;
 		transition: opacity .4s ease-in-out, visibility .4s ease-in-out;
