--- a/themes/twenty-seventeen/assets/scss/templates/_header.scss
+++ b/themes/twenty-seventeen/assets/scss/templates/_header.scss
@@ -58,7 +58,7 @@
 		}
 	}
 
-	i.dropdown {
+	i.drop-down {
 		opacity: 0;
 		visibility: hidden;
 		position: absolute;
